# pm-job-agent

./: .cursorrules  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: daily_run.yml
scripts/: bootstrap.sh  eval_scoring.py  rescore_sheet.py  sample_for_review.py  verify_location_scoring.py
src/pm_job_agent/: __init__.py  __main__.py
src/pm_job_agent/agents/: __init__.py  context.py  deduplicate.py  digest.py  discovery.py  generation.py  notify.py  persist.py  scoring.py  sync_sheets.py
src/pm_job_agent/cli/: __init__.py  generate_cmd.py  main.py
src/pm_job_agent/config/: __init__.py  search_profile.py  settings.py
src/pm_job_agent/graphs/: __init__.py  core_loop.py  state.py
src/pm_job_agent/integrations/: __init__.py  ashby.py  greenhouse.py  lever.py  linkedin.py  sheets.py
src/pm_job_agent/models/: __init__.py  llm.py
src/pm_job_agent/models/providers/: __init__.py  anthropic.py  gemini.py  ollama.py  openai.py
src/pm_job_agent/services/: __init__.py  freshness.py  redaction.py  seen_jobs.py  types.py
tests/: conftest.py
tests/unit/: test_ashby.py  test_cli.py  test_core_loop.py  test_deduplicate.py  test_digest.py  test_freshness.py  test_generate_cmd.py  test_generation.py  test_greenhouse.py  test_linkedin.py  test_llm_providers.py  test_location_gate.py  test_notify.py  test_persist.py  test_scoring_v2.py  test_seen_jobs.py  test_smoke.py  test_sync_sheets.py
