[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pm-job-agent"
version = "0.1.0"
description = "Multi-agent job hunting system (LangGraph)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "langgraph>=0.2.40",
]

[project.scripts]
pm-job-agent = "pm_job_agent.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/pm_job_agent/config/settings.py" = ["UP045"]
"src/pm_job_agent/graphs/core_loop.py" = ["UP045"]
